third_party/move/move-compiler-v2/tests/more-v1/parser/expr_abort_missing_value.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/expr_abort_missing_value.move:5:5
  │
5 │     }
  │     ^
  │     │
  │     Unexpected '}'
  │     Expected an expression term
